# Homepage

./: .gitignore  CHANGELOG.md  CNAME  Dockerfile.website  FIXES_AND_UPDATES.md  KOMMENTIERUNG-PLAN.md  KONFIGURATION.md  MIGRATION-WORKSPACES.md  Mitglieder 2026.xls  QUICK_REFERENCE.md  README.md  anmeldungen.html  anmeldungen_data.json  auth-callback.html  calendar.html  calendar.ics  docker-compose.yml  events-list.json  events.html  events.js  index.html  login.html  mein.html  members-dynamic.html  mitglieder-admin.html  mitglieder-login.html  mitglieder-profil.html  mitglieder.html  mitglieder_data.json  newsletter_subscribers.json  nginx.conf  package.json  qr-rechnung.html  schichtplan-manager.html  vorstand-list.json  vorstand.html
.claude/: settings.local.json
.email/: CREATE-SECRET.md  MAILCOW-SETUP.md  README.md  SETUP.md  TEST-MODE.md  recipients-secret-template.json  recipients.example.json  template.html
.letter/: README.md  recipients-template.json
.mailcow/: README.md
.otp-auth/: README.md
.trunk/: trunk.yaml
api/: .env.example  Dockerfile  README.md  package.json
backend/: server.js
briefe/: fasnacht-2026-helferaufruf.html
cloudflare-worker/: otp-auth.js
docker/: .env.example  Dockerfile.website  docker-compose.prod.yml  docker-compose.yml
vorstand-desktop/src-tauri/: Cargo.toml  tauri.conf.json
vorstand-desktop/src-tauri/capabilities/: default.json
vorstand-desktop/src-tauri/icons/: icon.icns
vorstand-desktop/src-tauri/src/: lib.rs
vorstand-desktop/src-tauri/src/commands/: auth.rs  files.rs  mod.rs  vault_crypto.rs
(+882 files in other folders)
