[package]
name = "vorstand-desktop"
version = "1.0.0"
description = "FWV Vorstand Desktop App"
authors = ["FWV Raura"]
edition = "2021"

[lib]
name = "vorstand_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["linux-native"] }
base64 = "0.22"
ring = "0.17"
aes = "0.8"
cbc = "0.1"
hmac = "0.12"
sha2 = "0.10"
rsa = "0.9"
pkcs8 = { version = "0.10", features = ["encryption"] }
hkdf = "0.12"
